updated my files from my host

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,18 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  padding: 12px;
+  line-height: 20px;
+  color: #333; 
+  background-color: #f9f9f9; 
+  border-radius: 8px; 
+}
+.legend i {
+  float: left;
+  width: 20px; 
+  height: 20px; 
+  margin-right: 10px; 
+  opacity: 0.8; 
+}
